# saw-core

./: README.md  SAW.types  SAWCore.cabal  Simple.hs  SimpleTypechecker.hs  commands.types  saw-core.cabal
.github/workflows/: coq-of-cryptol-prelude.yml  saw-core-coq-check-coq-files.yml  typecheck-generated-coq.yml
c-export/: README  saw-export.cabal
c-export/build-tools/: base-deps  build-test.sh  lib-to-obj.sh  make-lib.sh
c-export/cbits/: saw.c  saw.h
c-export/src/Verifier/SAW/: Export.hs  ForeignExport.hs
c-export/test/: .gitignore  Makefile  test_export.c
coq/handwritten/CryptolToCoq/: CompMExtra.v  SAWCoreBitvectors.v  SAWCoreVectorsAsCoqVectors.v
cryptol-saw-core/saw/: Cryptol.sawcore
cryptol-saw-core/src/Verifier/SAW/: Cryptol.hs  CryptolEnv.hs
prelude/: Cryptol.sawcore  Prelude.saw  Prelude.sawcore  SAW.core
saw-core/: saw-core.cabal
saw-core-aig/src/Verifier/SAW/Simulator/: BitBlast.hs
saw-core-coq/: README.md  saw-core-coq.cabal
saw-core-coq/coq/: .Makefile.coq.d
saw-core-coq/coq/handwritten/CryptolToCoq/: CompMExtra.v  SAWCoreBitvectors.v  SAWCorePreludeExtra.v  SAWCoreVectorsAsCoqVectors.v  save.tar
saw-core-coq/exe/: CoqOfCryptolPrelude.hs
saw-core-coq/src/Verifier/SAW/Translation/Coq/: CryptolPrelude.hs  SpecialTreatment.hs
saw-core-sbv/src/Verifier/SAW/Simulator/: SBV.hs
saw-core-what4/src/Verifier/SAW/Simulator/: What4.hs
saw-core/prelude/: Prelude.sawcore
saw-core/src/Verifier/SAW/: Constant.hs  OpenTerm.hs  Rewriter.hs  SCTypeCheck.hs  SharedTerm.hs  TracedOpenTerm.hs  Typechecker.hs
saw-core/src/Verifier/SAW/Simulator/: Concrete.hs  Prims.hs  RME.hs
saw-core/src/Verifier/SAW/Term/: CtxTerm.hs  Pretty.hs
src/Verifier/SAW/: AST.hs  BitBlast.hs  CryptolPrelude.hs  DagTerm.hs  Evaluator.hs  FiniteValue.hs  Module.hs  OpenTerm.hs  Prim.hs  SBVParser.hs  SCTypeCheck.hs  SharedTerm.hs  TracedOpenTerm.hs
src/Verifier/SAW/Export/: SmtLibTrans.hs  SmtLibTrans2.hs  Yices.hs
src/Verifier/SAW/Export/SMT/: Common.hs  Version1.hs  Version2.hs
src/Verifier/SAW/Import/: AIG.hs  Cryptol.hs
src/Verifier/SAW/Simulator/: Concrete.hs  RME.hs
src/Verifier/SAW/Term/: CtxTerm.hs  Pretty.hs
src/Verifier/SAW/Typechecker/: Common.hs
tests/: SMTTest.sawcore  TestSmtLib.hs
tests/src/Tests/: BitBlast.hs  Common.hs
