Name: saw-core
Description: Core SAW terms
Version: 0.1
Author: Galois, Inc.
Maintainer: jhendrix@galois.com
Build-type: Simple
cabal-version: >= 1.8

library
  build-depends:
    array,
    base >= 4,
    bytestring,
    containers,
    directory,
    fgl >= 5.3,
    filepath,
    mtl,
    pretty,
    template-haskell,
    transformers,
    utf8-string,
    vector
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW
     Verifier.SAW.Grammar
     Verifier.SAW.Lexer
     Verifier.SAW.ParserUtils
     Verifier.SAW.Prelude
     Verifier.SAW.SharedTerm
     Verifier.SAW.Typechecker
     Verifier.SAW.TypedAST
  other-modules:
     Verifier.SAW.Change
     Verifier.SAW.Position
     Verifier.SAW.UnionFind
     Verifier.SAW.UntypedAST
     Verifier.SAW.Utils
  GHC-options: -Wall
  extensions:
    DeriveFunctor
    GeneralizedNewtypeDeriving
    ImplicitParams
    ViewPatterns