Name: saw-core
Description: Core SAW terms
Version: 0.1
Author: Galois, Inc.
Maintainer: jhendrix@galois.com
Build-type: Simple
cabal-version: >= 1.8

library
  build-depends:
    array,
    base >= 4,
    binary,
    bytestring,
    containers,
    directory,
    fgl >= 5.3,
    filepath,
    ghc-prim,
    hashable >= 1.2,
    lens >= 3.8,
    mtl,
    parsec,
    pretty,
    process,
    ref-fd,
    smtLib,
    template-haskell,
    transformers,
    unordered-containers,
    utf8-string,
    vector,
    MaybeT,
    Verinf,
    wl-pprint
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW
     Verifier.SAW.Conversion
     Verifier.SAW.Export.SmtLibTrans
     Verifier.SAW.Export.SmtLibTrans2
     Verifier.SAW.Export.Yices
     Verifier.SAW.Cache
     Verifier.SAW.Grammar
     Verifier.SAW.Lexer
     Verifier.SAW.ParserUtils
     Verifier.SAW.Prelude
     Verifier.SAW.Prelude.Constants
     Verifier.SAW.Rewriter  
     Verifier.SAW.SBVParser
     Verifier.SAW.SharedTerm
     Verifier.SAW.TermNet
     Verifier.SAW.Typechecker
     Verifier.SAW.TypedAST
     Verifier.SAW.Change
  other-modules:
     Verifier.SAW.Position
     Verifier.SAW.Typechecker.Context
     Verifier.SAW.Typechecker.Monad
     Verifier.SAW.Typechecker.Simplification
     Verifier.SAW.Typechecker.Unification
     Verifier.SAW.UnionFind
     Verifier.SAW.UntypedAST
     Verifier.SAW.Utils
  GHC-options: -Wall
  extensions:
    DeriveFunctor
    GeneralizedNewtypeDeriving
    ImplicitParams
    ViewPatterns

test-suite test-sawcore
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests/src
  build-depends:
      base >= 4
    , containers
    , hashable
    , lens
    , mtl
    , QuickCheck
    , saw-core
    , time
    , unordered-containers
    , wl-pprint
  other-modules:
    Tests.SharedTerm
