Name:               saw-core
Version:            0.1
License:            BSD3
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         jhendrix@galois.com
Copyright:          (c) 2012-2014 Galois Inc.
Category:           Formal Methods
Build-type:         Simple
cabal-version:      >= 1.8
Synopsis:           SAWCore intermediate language
Description:
  The implementation of the SAWCore intermediate language,
  used by LSS, JSS, and SAWScript

extra-source-files:
    prelude/Prelude.sawcore

library
  build-depends:
    base == 4.*,
    aig,
    array,
    binary,
    bytestring,
    containers,
    data-inttrie,
    directory,
    fgl >= 5.3,
    filepath,
    ghc-prim,
    hashable >= 1.2,
    lens >= 3.8,
    mtl,
    parsec,
    pretty,
    process,
    ref-fd,
    smtLib,
    template-haskell,
    transformers,
    unordered-containers,
    utf8-string,
    vector,
    wl-pprint
  hs-source-dirs: src
  exposed-modules:
     Verifier.SAW
     Verifier.SAW.BitBlast
     Verifier.SAW.Conversion
     Verifier.SAW.Evaluator
     Verifier.SAW.Export.SMT.Common
     Verifier.SAW.Export.SMT.Version1
     Verifier.SAW.Export.SMT.Version2
     Verifier.SAW.Export.Yices
     Verifier.SAW.Cache
     Verifier.SAW.Grammar
     Verifier.SAW.Lexer
     Verifier.SAW.ParserUtils
     Verifier.SAW.Prelude
     Verifier.SAW.Prelude.Constants
     Verifier.SAW.Prim
     Verifier.SAW.Recognizer
     Verifier.SAW.Rewriter
     Verifier.SAW.Simulator
     Verifier.SAW.Simulator.BitBlast
     Verifier.SAW.Simulator.Prims
     Verifier.SAW.Simulator.Value
     Verifier.SAW.SharedTerm
     Verifier.SAW.TermNet
     Verifier.SAW.Typechecker
     Verifier.SAW.TypedAST
     Verifier.SAW.Change
  other-modules:
     Verifier.SAW.Position
     Verifier.SAW.Typechecker.Context
     Verifier.SAW.Typechecker.Monad
     Verifier.SAW.Typechecker.Simplification
     Verifier.SAW.Typechecker.Unification
     Verifier.SAW.UnionFind
     Verifier.SAW.UntypedAST
     Verifier.SAW.Utils
  GHC-options: -Wall
  extensions:
    DeriveFunctor
    GeneralizedNewtypeDeriving
    ImplicitParams
    ViewPatterns

test-suite test-sawcore
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests/src
  build-depends:
      base >= 4
    , abcBridge
    , containers
    , hashable
    , lens
    , mtl
    , QuickCheck
    , saw-core
    , time
    , unordered-containers
    , vector
    , Verinf
    , wl-pprint
  other-modules:
    Tests.BitBlast
    Tests.Common
    Tests.Parser
    Tests.Rewriter
    Tests.SharedTerm

executable extcore-info
  main-is: extcore-info.hs
  hs-source-dirs: tools
  build-depends:
      base >= 4
    , saw-core
