Name: saw-export
Description: SAW API callable from C
Version: 0.1
Author: Galois, Inc.
Maintainer: atomb@galois.com
Build-type: Simple
cabal-version: >= 1.8

extra-source-files:
  cbits/saw.c
  cbits/saw.h

library
  build-depends:
    base >= 4,
    saw-core
  hs-source-dirs:
    src
  c-sources:
    cbits/saw.c
  exposed-modules:
    Verifier.SAW.Export
  GHC-options:
    -Wall
  extensions:
    FFI
