Name:               saw-export
Version:            0.1
License:            BSD3
License-file:       LICENSE
Author:             Galois, Inc.
Maintainer:         atomb@galois.com
Copyright:          (c) 2012-2014 Galois Inc.
Category:           Data
Build-type:         Simple
cabal-version:      >= 1.8
Synopsis:           SAW API callable from C
Description:
  SAW API callable from C

extra-source-files:
  cbits/saw.c
  cbits/saw.h

library
  build-depends:
    base == 4.*,
    saw-core
  hs-source-dirs:
    src
  c-sources:
    cbits/saw.c
  exposed-modules:
    Verifier.SAW.ForeignExport
  GHC-options:
    -Wall
  extensions:
    ForeignFunctionInterface
